Joe review fixes/Merge Arb

--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -9,9 +9,9 @@
     <div class="col-12 px-3">
       <span id="settingsUpdatedMsg" class="settings-updated-msg px-2 d-hide">[[[settings_updated]]]</span>
       <br/>
+      <button id="backButton" class="fs20 px-2 mx-1 selected">[[[back]]]</button>
       <button id="updateButton" class="fs20 px-2 mx-1 selected">[[[update_settings]]]</button>
       <button id="createButton" class="fs20 px-2 mx-1 selected d-hide">[[[create_bot]]]</button>
-      <button id="cancelButton" class="fs20 px-2 mx-1 selected">[[[cancel]]]</button>
       <button id="resetButton" class="fs20 px-2 mx-1 selected">[[[reset_settings]]]</button>
     </div>
   </div>
