Open external links in new browser window

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -786,7 +786,7 @@
             <td data-tmpl="status"></td>
             <td data-tmpl="detailsLink" class="pointer hoverbg">
               <span class="mono">
-                <span data-tmpl="hashStart"></span>…<span data-tmpl="hashEnd"></span>
+                <a href="" data-tmpl="detailsLinkUrl" target="_blank"><span data-tmpl="hashStart"></span>…<span data-tmpl="hashEnd"></span></a>
               </span>
               <span class="ico-open ms-1"></span>
             </td>
@@ -828,7 +828,7 @@
           <div class="flex-center flex-grow-1 pe-3">
             <div data-tmpl="value" class="flex-center fs16 p-2"></div>
             <div data-tmpl="hash" class="hashwrap fs14 p-1"></div>
-            <div data-tmpl="explorerLink" class="p-2 hoverbg pointer"><span class="fs16 ico-open"></span></div>
+            <a href="" target="_blank" data-tmpl="explorerLink" class="p-2 hoverbg pointer"><span class="fs16 ico-open"></span></a>
           </div>
           <div class="d-flex align-items-stretch">
             <div class="flex-center flex-column pe-2">
