client/{webserver,app}: Update Market Making UI (#2491)
* client/{webserver,app}: Update Market Making UI

Updates the market making UI to reflect the updated way in which market
making works. A JSON configuration file, the same that would be used by
the RPC server, is stored on disk, and the UI gives users an interactive
way to read/update the config file, and also to start/stop market making.

The updated UI includes two screens, `/mm` and `/mmsettings`. `/mm` allows
users to see each of the market for which a market maker is configured,
allows the user to add/remove market makers, and links to the `/mmsettings`
page of each market maker. The `/mmsettings` page allows users to configure
each setting of each of the market makers.

The markets page is also updated to not allow users to place orders manually
while market making is running.

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -211,7 +211,7 @@
               </div>
 
               {{- /* ORDER TYPE BUTTONS */ -}}
-              <div id="orderTypeBttns" class="fs14 d-flex justify-content-start align-items-stretch d-hide min-fit">
+              <div id="orderTypeBttns" class="fs14 d-hide d-flex justify-content-start align-items-stretch d-hide min-fit">
                 <button id="limitBttn" type="button" class="flex-center px-3 py-0 markettab brdrbottom selected">[[[Limit Order]]]</button>
                 <button id="marketBttn" type="button" class="flex-center px-3 py-0 markettab brdrbottom brdrleft brdrright">[[[Market Order]]]</button>
               </div>
@@ -259,6 +259,16 @@
                   [[[acct_tier_post_bond]]]
                   <a id="dexSettingsLink" class="fs15 hoverbg subtlelink">[[[enable_bond_maintenance]]]</a>
                   </p>
+                </div>
+              </div>
+
+              {{- /* MM RUNNING */ -}}
+              <div class="d-hide fs15 pt-1 pb-3 text-center brdrbottom" id="mmRunning">
+                <div class="p-0 w-100">
+                  <div class="d-flex flex-column justify-content-center align-items-center">
+                    <span class="p-3 flex-center fs16 grey">[[[market_making_running]]]</span>
+                    <p class="text-center fs14 p-2 m-0">[[[cannot_manually_trade]]]</p>
+                  </div>
                 </div>
               </div>
 
