--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -9,7 +9,7 @@
   <link rel="icon" href="/img/favicon.png?v=AK4XS4">
   <meta name="description" content="Decred DEX Client Web Portal">
   <title>{{.Title}}</title>
-  <link href="/css/style.css?v=741b1f6b|773f0330" rel="stylesheet">
+  <link href="/css/style.css?v=f1e5270a|fd2cb731" rel="stylesheet">
 </head>
 <body {{if .UserInfo.DarkMode}} class="dark"{{end}}>
   <div class="popup-notes" id="popupNotes">
@@ -88,7 +88,7 @@
       [[[Order History]]]
     </a>
     {{if .Experimental}}
-    <a href="/markets" class="demi hoverbright plainlink d-flex align-items-center py-1 authed-only">
+    <a href="/mm" class="demi hoverbright plainlink d-flex align-items-center py-1 authed-only">
       <span class="ico-barchart fs16 me-2"></span>
       [[[Market Making]]]
     </a>
@@ -103,7 +103,7 @@
 {{end}}
 
 {{define "bottom"}}
-<script src="/js/entry.js?v=faadd923|2e83f47d"></script>
+<script src="/js/entry.js?v=be17df38|cdcbc806"></script>
 </body>
 </html>
 {{end}}
