Add closer button to Update bond dialog

--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -48,6 +48,7 @@
 
     {{- /* UPDATE BOND OPTIONS */ -}}
     <form class="d-hide" id="updateBondOptionsForm" autocomplete="off">
+      <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div class="py-1 text-center fs28 sans-light">[[[update_bond_options]]]</div>
       <div class="selectBondAsset mt-3">
        <label for="bondAssetSelect" class="form-label">[[[Asset]]]</label>
