use global typescript Window. more specific click binding

--- a/client/webserver/site/src/html/order.tmpl
+++ b/client/webserver/site/src/html/order.tmpl
@@ -40,7 +40,7 @@
       </div>
       <div class="order-datum">
         <div>[[[Offering]]]</div>
-        <div>{{$ord.OfferString}} {{$ord.FromTicker}} {{template "microIcon" $ord.FromTicker}}</div>
+        <div>{{$ord.OfferString}} {{$ord.FromTicker}} {{template "microIcon" $ord.FromSymbol}}</div>
       </div>
       <div class="order-datum">
         <div>[[[Asking]]]</div>
