add button to revisit settings page from dexsettings
Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/css/dex_settings.scss
+++ b/client/webserver/site/src/css/dex_settings.scss
@@ -5,3 +5,10 @@
 .update-cert-msg {
   color: green;
 }
+
+.go-back-to-settings {
+  display: flex;
+  width: 500px;
+  margin: 0 auto;
+  cursor: pointer;
+}
