--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -300,13 +300,13 @@
      <input class="form-check-input" type="checkbox" data-tmpl="rememberPass" id="logRememberPass">
      <label for="logRememberPass" class="form-check-label ps-1">[[[Remember my password]]]</label>
     </div>
-    <span id="forgotPassBtn" class="ps-1 fs16">
-     [[[Forgot Password]]]
-    </span>
   </div>
 </div>
 <div class="d-flex justify-content-center mt-2">
   <button data-tmpl="submit" type="button" class="justify-content-center fs15 bg2 selected w-50" id="loginSubmit">[[[Submit]]]</button>
+</div>
+<div class="d-flex justify-content-center mt-3">
+  <span id="forgotPassBtn" class="fs16 grey pointer bold">[[[Forgot Password]]]</span>
 </div>
 <div class="fs15 pt-3 text-center d-hide errcolor text-break" data-tmpl="errMsg"></div>
 {{end}}
