--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -17,8 +17,8 @@
     <div>
       <button id="disableAcctBtn" class="bg2 selected">[[[Disable Account]]]</button>
     </div>
-    <div{{if .Exchange.ViewOnly}} class="d-hide"{{end}}>
-      <button id="updateBondOptionsBtn" class="bg2 selected">[[[update_bond_options]]]</button>
+    <div {{if .Exchange.ViewOnly}} class="d-hide"{{end}}>
+      <button id="bondDetailsBtn" class="bg2 selected">[[[bond_details]]]</button>
     </div>
     <div>
       <input type="file" class="form-control select d-none" id="certFileInput">
@@ -46,15 +46,52 @@
       {{template "dexAddrForm" .}}
     </form>
 
-    {{- /* UPDATE BOND OPTIONS */ -}}
-    <form class="d-hide" id="updateBondOptionsForm" autocomplete="off">
+    {{- /* BOND DETAILS */ -}}
+    <form class="d-hide" id="bondDetailsForm" autocomplete="off">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
-      <div class="py-1 text-center fs28 sans-light">[[[update_bond_options]]]</div>
-      <div class="selectBondAsset mt-3">
+      <div class="py-1 fs28 text-center sans-light">[[[bond_details]]]</div>
+      <div class="d-flex justify-content-around my-3">
+        <span class="text-center">
+          [[[current_tier]]]
+          <span class="ico-info" data-tooltip="[[[current_tier_tooltip]]]"></span>
+          <br>
+          <span id="currentTier"></span>
+        </span>
+        <span class="text-center">
+          [[[current_target_tier]]]
+          <span class="ico-info" data-tooltip="[[[current_target_tier_tooltip]]]"></span>
+          <br>
+          <span id="currentTargetTier"></span>
+        </span>
+      </div>
+      <div class="d-flex justify-content-around my-3">
+        <span class="text-center">
+          [[[bond_cost]]]
+          <span class="ico-info" data-tooltip="[[[bond_cost_tooltip]]]"></span>
+          <br>
+          <span id="bondCost"></span>
+          <span class="bondAssetSym mx-2"></span>
+          <br>
+          <span class="d-flex d-hide justify-content-center grey fs14">
+            ~<span id="bondCostFiat" class="mx-1"></span>USD
+          </span>
+        </span>
+        <span class="text-center justify-content-center">
+          [[[bond_reservations]]]
+          <span class="ico-info" data-tooltip="[[[bond_reservations_tooltip]]]"></span>
+          <br>
+          <span id="bondReservationAmt"></span>
+          <span class="bondAssetSym mx-2"></span>
+          <br>
+          <span class="d-flex d-hide justify-content-center grey fs14">
+            ~<span id="bondReservationAmtFiat" class="mx-1"></span>USD
+          </span>
+      </div>
+      <div class="fs18 mt-2">[[[bond_options]]]:</div>
+      <div class="selectBondAsset py-1">
        <label for="bondAssetSelect" class="form-label">[[[Asset]]]</label>
        <select id="bondAssetSelect" class="w-100"></select>
       </div>
-
       <div class="mt-3">
         <label for="bondTargetTier" class="form-label">
           [[[target_tier]]]
@@ -62,9 +99,8 @@
         </label>
         <input type="number" min="0" class="form-control select bg1" id="bondTargetTier" autocomplete="off">
       </div>
-
       <div class="d-flex justify-content-end mt-3">
-        <button id="updateBondOptionsConfirm" class="submit bg2 fs18 selected">[[[Submit]]]</button>
+        <button id="updateBondOptionsConfirm" class="submit bg2 fs18 selected">[[[update_bond_options]]]</button>
       </div>
       <div id="bondOptionsErr" class="fs15 pt-3 text-center d-hide errcolor text-break"></div>
       <div id="bondOptionsMsg" class="fs15 pt-3 text-center d-hide text-break">[[[bond_options_update_success]]]</div>
