multi: add support for password recovery using seed (#2477)
* multi: add support for password recovery using seed

---------

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -330,8 +330,8 @@ div.popup-notes {
   }
 }
 
-#noteBox,
-#profileBox {
+#profileBox,
+#noteBox {
   position: fixed;
   display: flex;
   flex-direction: column;
@@ -364,8 +364,8 @@ div.popup-notes {
     }
   }
 
-  .authed-only:not(.authed) {
-    display: none;
+  &:not(.authed) .authed-only {
+    display: none !important;
   }
 }
 
@@ -549,3 +549,4 @@ sup.token-parent {
     font-weight: bold;
   }
 }
+
